--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,12 @@ jobs:
       - name: Set IMAGE_TAG
         id: set_output
         run: echo IMAGE_TAG=$(echo ${GITHUB_SHA}) >> $GITHUB_OUTPUT
+        
+  build:
+    needs: [prepare-build]
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: ${{ needs.prepare-build.outputs.IMAGE_TAG }}
+    steps:
+      - name: check
+        run: echo $IMAGE_TAG
