--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,12 +22,12 @@ jobs:
       - name: GET diff between TAGS
         id: git_diff
         if: $${{ steps.fetch_tag.outputs.PREV_TAG != '' }}
-        run: echo GIT_DIFF=$(git diff --name-only "$steps.fetch_tag.outputs.PREV_TAG" "$steps.fetch_tag.outputs.LATEST_TAG" -- src/main/proto) >> $GITHUB_OUTPUT
+        run: echo GIT_DIFF=$(git diff --name-only ${{steps.fetch_tag.outputs.PREV_TAG}} ${{steps.fetch_tag.outputs.LATEST_TAG}} -- src/main/proto) >> $GITHUB_OUTPUT
       - name: Compare diff
         run: |
-          echo $(steps.fetch_tag.outputs.PREV_TAG)
-          echo $${{steps.fetch_tag.outputs.PREV_TAG}}
-          if "$steps.fetch_tag.outputs.PREV_TAG" != '' &&  "$steps.git_diff.outputs.GIT_DIFF" == ''; then
+          echo ${{steps.fetch_tag.outputs.PREV_TAG}}
+          echo ${steps.fetch_tag.outputs.PREV_TAG}
+          if "${{steps.fetch_tag.outputs.PREV_TAG}}" != '' &&  "${{steps.git_diff.outputs.GIT_DIFF}}" == ''; then
             echo "There is no difference in proto"
           else 
             echo "publish"
