--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,8 +18,8 @@ jobs:
         id: fetch_tag
         run: |
          echo LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`) >> $GITHUB_OUTPUT
-         echo "$(git describe --tags `git rev-list --tags --max-count=1)
-         echo "$(git describe --abbrev=0 --tags `git rev-list --tags --skip=1 --max-count=1`)"
+         echo $(git describe --tags `git rev-list --tags --max-count=1`)
+         echo $(git describe --abbrev=0 --tags `git rev-list --tags --skip=1 --max-count=1`)
          echo PREV_TAG=$(git describe --abbrev=0 --tags `git rev-list --tags --skip=1 --max-count=1`) >> $GITHUB_OUTPUT
           echo "prev tag is $PREV_TAG"
       - name: GET diff between TAGS
