--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Fetch tags
         id: fetch_tag
         run: |
+         git fetch --tags 
          echo LATEST_TAG=$(git describe --abbrev=0 --tags `git rev-list --tags --max-count=1`) >> $GITHUB_OUTPUT
          echo $(git describe --abbrev=0 --tags `git rev-list --tags --max-count=1`)
          echo $(git describe --abbrev=0 --tags `git rev-list --tags --skip=1 --max-count=1`)
