--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           if [[ $steps.fetch_git_tags.outputs.PREV_TAG != $$steps.fetch_git_tags.outputs.LATEST_TAG ]]; then
             PROTO_GIT_DIFF=$(git diff --name-only  $prev_tag  $latest_tag -- src/main/proto)
-            echo $PROTO_GIT_DIFF
+            echo "proto git diff is:$PROTO_GIT_DIFF:"
             echo "PROTO_GIT_DIFF=${PROTO_GIT_DIFF}" >> $GITHUB_OUTPUT
           fi
       - name: Check whether build should publish or not
