--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,16 +33,16 @@ jobs:
           echo "PREV_TAG=${PREV_TAG}" >> $GITHUB_OUTPUT>> $GITHUB_OUTPUT
       - name: GET GITHUB differences for proto files
         id: git_diff
+        if: $${{ steps.fetch_git_tags.outputs.PREV_TAG != steps.fetch_git_tags.outputs.LATEST_TAG }}
         run: |
-          if [[ $steps.fetch_git_tags.outputs.PREV_TAG != $$steps.fetch_git_tags.outputs.LATEST_TAG ]]; then
             PROTO_GIT_DIFF=$(git diff --name-only  $prev_tag  $latest_tag -- src/main/proto)
             echo "proto git diff is:$PROTO_GIT_DIFF:"
             echo "PROTO_GIT_DIFF=${PROTO_GIT_DIFF}" >> $GITHUB_OUTPUT
-          fi
       - name: Check whether build should publish or not
         id: should_publish
+        if: $${{ steps.fetch_git_tags.outputs.PREV_TAG != steps.fetch_git_tags.outputs.LATEST_TAG }}
         run: |
-          if [[ $steps.fetch_git_tags.outputs.PREV_TAG != $steps.fetch_git_tags.outputs.LATEST_TAG && $steps.git_diff.outputs.PROTO_GIT_DIFF != '' ]]; then
+          if [[ $steps.git_diff.outputs.PROTO_GIT_DIFF != '' ]]; then
             echo "SHOULD_PUBLISH=true" >> $GITHUB_OUTPUT
             echo " true?"
           fi
