--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,9 +42,8 @@ jobs:
         id: should_publish
         if: $${{ steps.fetch_git_tags.outputs.PREV_TAG != steps.fetch_git_tags.outputs.LATEST_TAG }}
         run: |
-          if [[ "$steps.git_diff.outputs.PROTO_GIT_DIFF" != "" ]]; then
-            echo "SHOULD_PUBLISH=true" >> $GITHUB_OUTPUT
-            echo " true?"
+          if [ -z "$steps.git_diff.outputs.PROTO_GIT_DIFF" ]; then
+            echo "SHOULD_PUBLISH=false" >> $GITHUB_OUTPUT
           fi
 
   publish:
