--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,14 +39,16 @@ jobs:
         id: git_diff
         if: $${{steps.fetch_git_tags.outputs.PREV_TAG != steps.fetch_git_tags.outputs.LATEST_TAG}}
         run: |
-          PROTO_GIT_DIFF=$(git diff --name-only --quiet ${{steps.fetch_git_tags.outputs.PREV_TAG}}  ${{steps.fetch_git_tags.outputs.LATEST_TAG}} -- src/main/proto)
-          echo "proto git diff is:$PROTO_GIT_DIFF:"
-          echo "PROTO_GIT_DIFF=${PROTO_GIT_DIFF}" >> $GITHUB_OUTPUT
+          if ! git diff --name-only --exit-code ${{steps.fetch_git_tags.outputs.PREV_TAG}}  ${{steps.fetch_git_tags.outputs.LATEST_TAG}} -- src/main/proto; then
+            echo "PROTO_GIT_DIFF=true" >> $GITHUB_OUTPUT
+          else
+            echo "PROTO_GIT_DIFF=false" >> $GITHUB_OUTPUT
+          fi
       - name: Check whether build should publish or not
         id: should_publish
         if: $${{steps.fetch_git_tags.outputs.PREV_TAG != steps.fetch_git_tags.outputs.LATEST_TAG}}
         run: |
-          if [ -z "$steps.git_diff.outputs.PROTO_GIT_DIFF" ]; then
+          if steps.git_diff.outputs.PROTO_GIT_DIFF; then
             echo "no need to publish proto jar since there is no difference!!"
             echo "SHOULD_PUBLISH=false" >> $GITHUB_OUTPUT
           else
