--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,17 +40,15 @@ jobs:
         if: $${{steps.fetch_git_tags.outputs.PREV_TAG != steps.fetch_git_tags.outputs.LATEST_TAG}}
         run: |
           if ! git diff --name-only --exit-code ${{steps.fetch_git_tags.outputs.PREV_TAG}}  ${{steps.fetch_git_tags.outputs.LATEST_TAG}} -- src/main/proto; then
-            echo " there are differences"
             echo "PROTO_GIT_DIFF=true" >> $GITHUB_OUTPUT
           else
-            echo " there are no differences"
             echo "PROTO_GIT_DIFF=false" >> $GITHUB_OUTPUT
           fi
       - name: Check whether build should publish or not
         id: should_publish
         if: $${{steps.fetch_git_tags.outputs.PREV_TAG != steps.fetch_git_tags.outputs.LATEST_TAG}}
         run: |
-          if steps.git_diff.outputs.PROTO_GIT_DIFF; then
+          if [ $steps.git_diff.outputs.PROTO_GIT_DIFF]; then
             echo "no need to publish proto jar since there is no difference!!"
             echo "SHOULD_PUBLISH=false" >> $GITHUB_OUTPUT
           else
