--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
   prepare-publish:
     runs-on: ubuntu-latest
     outputs:
-      SHOULD_PUBLISH: ${{ steps.should_publish.outputs.SHOULD_PUBLISH }}
+      SHOULD_PUBLISH: ${{ steps.git_diff.outputs.SHOULD_PUBLISH }}
     steps:
       - name: check branch for release
         if: ${{ github.event_name == 'release' && github.event.release.target_commitish != 'master'}}
@@ -35,20 +35,11 @@ jobs:
           PREV_TAG=$(git describe --abbrev=0 --tags `git rev-list --tags --skip=1 --max-count=1`)
           echo "PREV_TAG=${PREV_TAG}" >> $GITHUB_OUTPUT
           echo "Previous tag is ${PREV_TAG}"
-      - name: GET GITHUB differences for proto files
+      - name: Check GITHUB diff to confirm whether build should publish or not
         id: git_diff
         if: $${{steps.fetch_git_tags.outputs.PREV_TAG != steps.fetch_git_tags.outputs.LATEST_TAG}}
         run: |
           if ! git diff --name-only --exit-code ${{steps.fetch_git_tags.outputs.PREV_TAG}}  ${{steps.fetch_git_tags.outputs.LATEST_TAG}} -- src/main/proto; then
-            echo "PROTO_GIT_DIFF=true" >> $GITHUB_OUTPUT
-          else
-            echo "PROTO_GIT_DIFF=false" >> $GITHUB_OUTPUT
-          fi
-      - name: Check whether build should publish or not
-        id: should_publish
-        if: $${{steps.fetch_git_tags.outputs.PREV_TAG != steps.fetch_git_tags.outputs.LATEST_TAG}}
-        run: |
-          if [ "$steps.git_diff.outputs.PROTO_GIT_DIFF" == true]; then
             echo "no need to publish proto jar since there is no difference!!"
             echo "SHOULD_PUBLISH=false" >> $GITHUB_OUTPUT
           else
