--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
   prepare-publish:
     runs-on: ubuntu-latest
     outputs:
-      SHOULD_PUBLISH: ${{ steps.git_diff.outputs.SHOULD_PUBLISH }}
+      SHOULD_PUBLISH: ${{ steps.should_publish.outputs.SHOULD_PUBLISH }}
     steps:
       - name: check branch for release
         if: ${{ github.event_name == 'release' && github.event.release.target_commitish != 'master'}}
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          submodules: recursive
 
       - name: Get last two GITHUB tags to compare differences
         id: fetch_git_tags
@@ -52,10 +53,18 @@ jobs:
     if: ${{needs.prepare-publish.outputs.SHOULD_PUBLISH == true}}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: 'zulu'
+          cache: gradle
 
   send-release-announcement:
     needs: [publish]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: 'zulu'
+          cache: gradle
