--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,7 @@ jobs:
           tags=$(git tag --sort=-committerdate | head -n 2)
           echo $tags
           read -d "\n" LATEST_TAG PREV_TAG <<<$tags
+          echo $tags
           echo "LATEST_TAG=${LATEST_TAG}" >> $GITHUB_OUTPUT
           echo "Latest tag is ${LATEST_TAG}"
           echo "PREV_TAG=${PREV_TAG}" >> $GITHUB_OUTPUT
