--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: build_push_dev_image
 on:
-  workflow_dispatch
+  workflow_dispatch:
+   inputs:
+    version:
+        description: "version (format: '^v[0-9]+.[0-9]+.[0-9]$') e.g. 'v1.0' (package name will be '<version>-rc-yyyyMMddHHmm')"
+        required: true
 
 jobs:
   prepare-build:
