--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,50 +10,21 @@ on:
         required: true
 
 jobs:
-  prepare-publish:
-    runs-on: ubuntu-latest
-    outputs:
-      SHOULD_PUBLISH: ${{ steps.git_diff.outputs.SHOULD_PUBLISH }}
-    steps:
-
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          submodules: recursive
-
-      - name: Get the latest two GitHub tags to compare differences
-        id: fetch_git_tags
-        run: |
-          git fetch --tags
-          tags=$(git tag --sort=-committerdate | head -n 2)
-          LATEST_TAG=$(echo "$tags" | awk 'NR==1 {print}')
-          echo "LATEST_TAG=${LATEST_TAG}" >> $GITHUB_OUTPUT
-          echo "Latest tag is ${LATEST_TAG}"
-
-          PREV_TAG=$(echo "$tags" | awk 'NR==2 {print}')
-          echo "PREV_TAG=${PREV_TAG}" >> $GITHUB_OUTPUT
-          echo "Previous tag is ${PREV_TAG}"
-      - name: Check GitHub diff to confirm whether the build should be published or not
-        id: git_diff
-        run: |
-          if [ -z "${{steps.fetch_git_tags.outputs.PREV_TAG}}" ]; then
-            echo "Will publish proto jar since this is first release!!"
-            echo "SHOULD_PUBLISH=true" >> $GITHUB_OUTPUT
-          elif git diff --name-only --exit-code ${{steps.fetch_git_tags.outputs.PREV_TAG}}  ${{steps.fetch_git_tags.outputs.LATEST_TAG}} -- src/main/proto; then
-            echo "No need to publish proto jar since there is no difference!!"
-            echo "SHOULD_PUBLISH=false" >> $GITHUB_OUTPUT
-          else
-            echo "Will publish proto jar since there are some differences!!"
-            echo "SHOULD_PUBLISH=true" >> $GITHUB_OUTPUT
-          fi
 
   publish:
-    needs: [prepare-publish]
-    if: ${{ needs.prepare-publish.outputs.SHOULD_PUBLISH == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: publish
         run: echo "publish to slack"
+      - name: Set env for release
+        if: ${{ github.event_name == 'release' }}
+        run: |
+          echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
+          echo ${{env.RELEASE_VERSION}}
+        
+      - name: Set env for dispatch
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        run: echo "RELEASE_VERSION=${{ github.event.inputs.version }}-rc-$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
 
 
   send-release-announcement:
