--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
         if: ${{ github.event_name == 'release' }}
         run: |
           echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
-          echo ${{env.RELEASE_VERSION}}
+          echo $env.RELEASE_VERSION
         
       - name: Set env for dispatch
         if: ${{ github.event_name == 'workflow_dispatch' }}
