--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,13 +19,15 @@ jobs:
       - name: Set env for release
         if: ${{ github.event_name == 'release' }}
         run: |
-          echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
+          RELEASE_VERSION=${GITHUB_REF:10}
+          echo "RELEASE_VERSION=${RELEASE_VERSION}" >> $GITHUB_ENV
           echo "$RELEASE_VERSION"
         
       - name: Set env for dispatch
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
-          echo "RELEASE_VERSION=${{ github.event.inputs.version }}-rc-$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
+          RELEASE_VERSION=${{ github.event.inputs.version }}-rc-$(date +'%Y%m%d%H%M')
+          echo "RELEASE_VERSION=${RELEASE_VERSION}" >> $GITHUB_ENV
           echo "$RELEASE_VERSION"
 
 
