--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,8 @@ jobs:
           RELEASE_VERSION=${{ github.event.inputs.version }}-rc-$(date +'%Y%m%d%H%M')
           echo "RELEASE_VERSION=${RELEASE_VERSION}" >> $GITHUB_ENV
           echo "$RELEASE_VERSION"
+      - name: Check RELEASE_VERSION format # valid example: 1.0 (release), 1.0-rc-202101010000 (workflow_dispatch)
+        run: echo ${RELEASE_VERSION} | grep -cE '^[0-9]+.[0-9]+.[0-9]+(|-rc-[0-9]+)$'
 
 
   send-release-announcement:
