--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,39 +3,16 @@ on:
   release:
     types: [released]
 
-  workflow_dispatch:
-    inputs:
-      version:
-        description: "version (format: '^[0-9]+.[0-9]+.[0-9]$') e.g. '1.0.21' (package name will be '<version>-rc-yyyyMMddHHmm')"
-        required: true
-
 jobs:
 
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: publish
-        run: echo "publish to slack"
       - name: Set env for release
         if: ${{ github.event_name == 'release' }}
-        run: |
-          RELEASE_VERSION=${GITHUB_REF:10}
-          echo "RELEASE_VERSION=${RELEASE_VERSION}" >> $GITHUB_ENV
-          echo "$RELEASE_VERSION"
-        
-      - name: Set env for dispatch
-        if: ${{ github.event_name == 'workflow_dispatch' }}
-        run: |
-          RELEASE_VERSION=${{ github.event.inputs.version }}-rc-$(date +'%Y%m%d%H%M')
-          echo "RELEASE_VERSION=${RELEASE_VERSION}" >> $GITHUB_ENV
-          echo "$RELEASE_VERSION"
-      - name: Check RELEASE_VERSION format # valid example: 1.0 (release), 1.0-rc-202101010000 (workflow_dispatch)
+        run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
+      - name: Check RELEASE_VERSION format # valid example: 1.0.0 (release), 1.0.1-rc-202101010000 (workflow_dispatch)
         run: echo ${RELEASE_VERSION} | grep -cE '^[0-9]+.[0-9]+.[0-9]+(|-rc-[0-9]+)$'
-
-
-  send-release-announcement:
-    needs: [publish]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Post to a Slack channel
-        run: echo "slack announcement"
+      - name: test
+        run: echo ${RELEASE_VERSION}
+      
