--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,13 @@
-name: Publish package to GitHub Packages
+name: Release Publish Workflow
+
 on:
   release:
-    types: [released]
+    types: [published]
 
 jobs:
-
-  publish:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Set env for release
         if: ${{ github.event_name == 'release' }}
@@ -15,4 +16,3 @@ jobs:
         run: echo ${RELEASE_VERSION} | grep -cE '^[0-9]+.[0-9]+.[0-9]+(|-rc-[0-9]+)$'
       - name: test
         run: echo ${RELEASE_VERSION}
-      
